# crawler-notify

.github/workflows/: build-container.yml  main-ci.yml
crawler-notify/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
crawler-notify/src/: main.py  main_old.py
crawler-notify/src/services/: kenshiyonezu.py
crawler-notify/src/templates/: index.html
crawler-notify/src/utils/: env.py  requests.py  telegram.py
