[tool.poetry]
name = "crawler-notify"
version = "0.1.0"
description = ""
authors = ["Ryan Lee <lee98064@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
environs = "^14.1.1"
flask = "^3.1.0"
apscheduler = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
